--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <h1>Odin Recipes</h1>
     <ul>
       <li><a href="recipes/pizza.html">How to Make Pizza</a></li>
+      <li>
+        <a href="recipes/chili-con-carne.html">How to Make Chili Con Carne</a>
+      </li>
+      <li><a href="recipes/french-toast.html">How to Make Recipe 3</a></li>
     </ul>
   </body>
 </html>
