Fix navigation link text from 'How to make Recipe 3' to 'How to make French Toast'

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <li>
         <a href="recipes/chili-con-carne.html">How to Make Chili Con Carne</a>
       </li>
-      <li><a href="recipes/french-toast.html">How to Make Recipe 3</a></li>
+      <li><a href="recipes/french-toast.html">How to Make French Toast</a></li>
     </ul>
   </body>
 </html>
