Update chili con carne and french toast recipe pages with ingredients and instructions

--- a/recipes/chili-con-carne.html
+++ b/recipes/chili-con-carne.html
@@ -14,66 +14,41 @@
     />
     <h2>Ingredients</h2>
     <ul>
-      <li>Lorem, ipsum dolor.</li>
-      <li>Lorem, ipsum dolor.</li>
-      <li>Lorem ipsum dolor sit amet.</li>
-      <li>Lorem ipsum dolor sit.</li>
-      <li>Lorem ipsum dolor sit amet consectetur.</li>
-      <li>Lorem, ipsum.</li>
-      <li>Lorem ipsum dolor sit amet.</li>
+      <li>4 tbsp vegetable oil</li>
+      <li>1 green bell pepper, chopped</li>
+      <li>1 yellow onion, chopped</li>
+      <li>2 1/2 lb lean ground beef</li>
+      <li>2/3 cup red wine</li>
+      <li>2 (16 oz) cans whole peeled tomatoes, chopped, juice reserved</li>
+      <li>1 (12 oz) can tomato paste</li>
+      <li>2 garlic cloves, crushed</li>
+      <li>2 tbsp dried parsley</li>
+      <li>2 1/2 tsp dried basil</li>
+      <li>2 1/2 tsp chili powder</li>
+      <li>1 1/2 tsp paprika</li>
+      <li>1 tsp cayenne pepper</li>
+      <li>1/2 tsp dried oregano</li>
+      <li>1 tsp salt</li>
+      <li>1/2 tsp black pepper</li>
+      <li>1 (15 oz) can kidney beans, drained</li>
+      <li>12 drops hot pepper sauce</li>
+      <li>3 tbsp flour</li>
+      <li>3 tbsp corn meal</li>
+      <li>1/2 cup water</li>
     </ul>
     <h2>Steps</h2>
     <ol>
       <li>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati
-        fugiat harum distinctio ipsam voluptate, dolores velit vero, totam,
-        minima exercitationem quaerat repellat expedita veniam veritatis
-        dignissimos eos laudantium nemo. Expedita!
+        Whisk milk, eggs, vanilla, cinnamon, and salt together in a shallow
+        bowl.
       </li>
       <li>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci a quo
-        corrupti officiis exercitationem neque, minus nesciunt veniam aliquam,
-        reprehenderit voluptas tempora corporis libero doloribus distinctio
-        commodi dignissimos nulla facilis?
+        Lightly butter a griddle or skillet and heat over medium-high heat. Dunk
+        bread in the egg mixture, soaking both sides.
       </li>
       <li>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores
-        odit deserunt perferendis amet!
-      </li>
-      <li>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam,
-        tempora deleniti. Ullam voluptatibus delectus quidem?
-      </li>
-      <li>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odio quae
-        magni saepe iusto, id quo voluptatem voluptate quas voluptates impedit a
-        illo excepturi eum autem in quisquam optio incidunt eos.
-      </li>
-      <li>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat
-        ratione dolorum similique aliquam ullam illum vitae voluptate minima ex.
-        Odio commodi non qui, laboriosam ea saepe ad neque doloremque iusto.
-      </li>
-      <li>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam
-        velit iste doloribus ducimus voluptate itaque fuga explicabo
-        exercitationem quibusdam. Laborum id excepturi esse iure molestias error
-        aliquam ipsum nihil amet.
-      </li>
-      <li>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem eum
-        rem, quam deserunt a quo quod non facilis expedita doloremque debitis ad
-        quisquam eligendi dicta asperiores voluptatum maiores repudiandae!
-      </li>
-      <li>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae
-        repudiandae in obcaecati ratione fugiat?
-      </li>
-      <li>
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cupiditate
-        harum magni nam voluptate incidunt fugit ad odit. Impedit fugit odit,
-        asperiores maxime aliquid consectetur consequatur eaque facere magnam
-        atque autem.
+        Transfer to the hot skillet and cook until golden, 3 to 4 minutes per
+        side.
       </li>
     </ol>
   </body>
