--- a/recipes/french-toast.html
+++ b/recipes/french-toast.html
@@ -14,13 +14,13 @@
     />
     <h2>Ingredients</h2>
     <ul>
-      <li>Lorem, ipsum dolor.</li>
-      <li>Lorem, ipsum dolor.</li>
-      <li>Lorem ipsum dolor sit amet.</li>
-      <li>Lorem ipsum dolor sit.</li>
-      <li>Lorem ipsum dolor sit amet consectetur.</li>
-      <li>Lorem, ipsum.</li>
-      <li>Lorem ipsum dolor sit amet.</li>
+      <li>2/3 cup milk</li>
+      <li>2 large eggs</li>
+      <li>1 tsp vanillla extract (optional)</li>
+      <li>1/4 tsp ground cinnamon (optional)</li>
+      <li>salt to taste</li>
+      <li>6 thick slices of bread</li>
+      <li>1 tbsp unsalted butter</li>
     </ul>
     <h2>Steps</h2>
     <ol>
