--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Recipes| Pizza</title>
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <h1>How to Make Pizza</h1>
