refactor: update HTML with <nav> element and add intro text to homepage

--- a/index.html
+++ b/index.html
@@ -8,12 +8,20 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <ul>
-      <li><a href="recipes/pizza.html">How to Make Pizza</a></li>
-      <li>
-        <a href="recipes/chili-con-carne.html">How to Make Chili Con Carne</a>
-      </li>
-      <li><a href="recipes/french-toast.html">How to Make French Toast</a></li>
-    </ul>
+    <p>
+      Welcome to Odin Recipes. We have the best recipes in the world. Pick a
+      recipe to begin cooking!
+    </p>
+    <nav>
+      <ul>
+        <li><a href="recipes/pizza.html">How to Make Pizza</a></li>
+        <li>
+          <a href="recipes/chili-con-carne.html">How to Make Chili Con Carne</a>
+        </li>
+        <li>
+          <a href="recipes/french-toast.html">How to Make French Toast</a>
+        </li>
+      </ul>
+    </nav>
   </body>
 </html>
